Add: header myprofile

--- a/css/variables.css
+++ b/css/variables.css
@@ -3,4 +3,7 @@
     --ms-secondary-color: #eaeaea;
     --ms-gray-color: #bdb9c1;
     --ms-light-gray-color: #e9ebeb;
+
+    --ms-acqua-bg-color: #009688;
+    --ms-gray-bg-color: #dbdbd4;
 }
