--- a/css/layout.css
+++ b/css/layout.css
@@ -14,7 +14,7 @@
 
 body{
     height: 100vh;
-    background-color: #dbdbd4;
+    background-color: var(--ms-gray-bg-color);
     display: flex;
     align-items: center;
 }
@@ -28,7 +28,7 @@ body::before{
     right: 0;
     background: blue;
     z-index:-1;
-    background-color: #009688;
+    background-color: var(--ms-acqua-bg-color);
 }
 
 /*---------------
@@ -37,7 +37,7 @@ body::before{
 
 .ms-boozapp-container{
     width: 78.13%;
-    background-color: red;
+    background-color: white;
     height: 94%;
     margin: auto;
 }
@@ -51,8 +51,12 @@ body::before{
     COINTAINER - HEADERS
 ----------------*/
 
+header{
+    height: 8%;
+}
+
 .ms-boozapp-header{
-    background-color: #eaeaea;
-    height: 10%;
+    height: 100%;
+    width: 100%;
 }
 
