--- a/css/layout.css
+++ b/css/layout.css
@@ -47,6 +47,12 @@ body::before{
 
 }
 
+.ms-message-main{
+    background-image: url('../img/mine.jpg');
+    border-left: solid 2px;
+    border-color: var(--ms-gray-bg-color);
+}
+
 /*---------------
     COINTAINER - HEADERS
 ----------------*/
