Add: Notification Popup

--- a/css/typography.css
+++ b/css/typography.css
@@ -10,6 +10,10 @@ body{
     background-color: var(--ms-secondary-color);
 }
 
+.ms-bg-popup{
+    background-color: var(--ms-popup-color);
+}
+
 /*---------------
     COLOR
 ----------------*/
