--- a/css/variables.css
+++ b/css/variables.css
@@ -2,7 +2,7 @@
     --ms-primary-color: #ffffff;
     --ms-secondary-color: #eaeaea;
     --ms-gray-color: #bdb9c1;
-    --ms-light-gray-color: #e9ebeb;
+    --ms-light-gray-color: #fafafa;
 
     --ms-acqua-bg-color: #009688;
     --ms-gray-bg-color: #dbdbd4;
