--- a/css/utilities.css
+++ b/css/utilities.css
@@ -30,3 +30,39 @@
 .ms-popup-text a{
     color: rgb(100, 100, 100);
 }
+
+/*-------------------
+    SEARCHBAR
+--------------------*/
+
+.ms-contacts-searchbar{
+    display: flex;
+    padding: .625rem;
+    background-color: var(--ms-primary-color);
+    border: 1px solid lightgray;
+}
+
+.ms-contacts-searchbar input[type=text]{
+    border: none;
+    width: 100%;
+    outline: none;
+    padding-left: .625rem;
+}
+
+.ms-input-icon{
+    padding: 0 .625rem;
+    position: relative;
+}
+
+.ms-input-icon:after {
+    content: '';
+    height: 44px;
+    width: 1px;
+  
+    position: absolute;
+    right: 0;
+    top: -10px;
+  
+    background-color: lightgray;
+  }
+
