Add: V-for card-contact cycle and layout

--- a/css/layout.css
+++ b/css/layout.css
@@ -14,21 +14,11 @@
 
 body{
     height: 100vh;
-    background-color: var(--ms-gray-bg-color);
+    background: linear-gradient(to bottom, var(--ms-acqua-bg-color) 0 14%, var(--ms-gray-bg-color) 14% 100% );
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     display: flex;
     align-items: center;
-}
-
-body::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 84%;
-    left: 0;
-    right: 0;
-    background: blue;
-    z-index:-1;
-    background-color: var(--ms-acqua-bg-color);
 }
 
 /*---------------
@@ -37,13 +27,9 @@ body::before{
 
 .ms-boozapp-container{
     width: 78.13%;
-    background-color: white;
+    background-color: var(--ms-primary-color);
     height: 94%;
     margin: auto;
-}
-
-.ms-list-contact{
-
 }
 
 .ms-message-main{
@@ -57,10 +43,20 @@ body::before{
 ----------------*/
 
 header{
-    height: 7%;
+    height: 3.75rem;
 }
 
 .ms-boozapp-header{
     height: 100%;
     width: 100%;
+    overflow: hidden;
+}
+
+/*---------------
+    CONTACT-CARD
+----------------*/
+
+.ms-card-contact{
+    padding: 10px 30px;
+    border-top: solid 1px var(--ms-secondary-color);
 }
