--- a/css/layout.css
+++ b/css/layout.css
@@ -66,7 +66,13 @@ header{
 
 .ms-message-chatbox main{
     height: calc(100% - 120px);
+    overflow: auto;
+}
 
+.ms-messages-area{
+    padding: 0 10%;
+    padding-top: 5%;
+    padding-bottom: .625rem;
 }
 
 /*---------------
