--- a/css/utilities.css
+++ b/css/utilities.css
@@ -93,6 +93,10 @@
     right: 10px;
 }
 
+.ms-last-message-chat{
+    font-size: 14px;
+}
+
 /*---------------
     MESSAGE
 ----------------*/
@@ -105,6 +109,7 @@
     border-radius: 10px;
     min-width: 25%;
     max-width: 45%;
+    position: relative;
 }
 
 .sent{
@@ -114,6 +119,13 @@
 
 .received{
     background-color: var(--ms-primary-color);
+}
+
+.ms-message-date{
+    position: absolute;
+    font-size: 12px;
+    right: 10px;
+    bottom: 0;
 }
 
 
