--- a/css/utilities.css
+++ b/css/utilities.css
@@ -100,7 +100,6 @@
 /*---------------
     MESSAGE
 ----------------*/
-
 .ms-message-box{
     padding-top: .625rem;
     padding-left: 1.25rem;
@@ -126,6 +125,14 @@
     font-size: 12px;
     right: 10px;
     bottom: 0;
+}
+
+.dropdown button{
+    border: none;
+    background-color: transparent;
+    position: absolute;
+    right: -10px;
+    bottom: 10px;
 }
 
 
